catalog-service/catalog-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mernspace-catalog-ingress
  annotations:
      kubernetes.io/ingress.class: "nginx"
      nginx.ingress.kubernetes.io/ssl-redirect: "false"
      # nginx.ingress.kubernetes.io/enable-cors: "true"
      # nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, PATCH, GET, POST, OPTIONS, HEAD"
      # nginx.ingress.kubernetes.io/cors-allow-origin: "https://*.adityavyas.com"
      nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
      nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - api-pizza.adityavyas.com
    secretName: auth-tls
  rules:
  - host: api-pizza.adityavyas.com
    http:
      paths:
        - path: /api/catalog(/|$)(.*)
          pathType: ImplementationSpecific
          backend:
            service:
              name: catalog-service
              port:
                number: 5502
